# portfolio-chatbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRATO.md  Dockerfile  README.md  TICKETS.md  docker-compose.yml  pyproject.toml  requirements.txt  update_knowledge.sh
config/: system_role.md
data/: PERFIL_Academico_y_Habilidades.md  PERFIL_FabsLabs.md  PERFIL_Sobre_Mi.md  Portfolio_RAG_Assistant.md  TradeHub.md  perfil.md  telemetria_experimental.md  telemetria_resiliente.md  usage_logs.json
data/educacion/: formacion_academica.md
data_example/educacion/: educacion_ejemplo.md
data_example/experiencia/: experiencia_ejemplo.md
data_example/perfil/: perfil_ejemplo.md
data_example/proyectos/: proyecto_ejemplo.md
docs/handoff/: session_2026-06-24.md  session_2026-06-25.md  session_2026-06-25b.md
src/: admin.py  chat.py  check_models.py  config.py  config_loader.py  data_loader.py  guardrails.py  ingest.py  ingest_database.py  llm_engine.py  main.py  rate_limiter.py  retry.py
src/api/: chat_router.py  dependencies.py
src/core/: orchestrator.py  session_manager.py  usage_tracker.py
src/models/: schemas.py
src/pipelines/: ingest.py
src/services/: llm_groq.py  semantic_router.py  vector_db.py
tests/: evaluator.py
tests/Pruebas hechas/: test_lote_1_basico.json  test_lote_2_razonamiento.json  test_lote_3_robustez.json  test_lote_3_seguridad.json  test_lote_4_idioma.json  test_lote_5_memoria.json  test_lote_6_conversacion.json
tests/datasets/: extraccion.json  falsos_positivos.json  idiomas.json  memoria.json  razonamiento.json  (+3 more)
(+9 files in other folders)
