[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "portfolio-chatbot-api"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-openai>=1.1.0",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "langchain-community>=0.4.0",
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "slowapi>=0.1.9",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.2.0",
    "pydantic>=2.12.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "langchain-groq>=1.1.0",
    "ragas>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
